# streamlit-idealista

./: .gitignore  Makefile  README.md  environment-conda.yml  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: mkdocs.yml
docs/docs/: index.md
streamlit_idealista/: Idealista_Dataset.py  __init__.py  config.py  dataset.py  features.py  functions.py  plots.py  streamlit_app.py  test.ipynb  test_district.ipynb
streamlit_idealista/.streamlit/: config.toml
streamlit_idealista/modeling/: predict.py  train.py
streamlit_idealista/pages/: 01_Interventions.py  02_Control_Group_Selection.py
streamlit_idealista/style/: style.css
